# pilz_application_templates

./: .travis.yml  README.md  versions.list
prbt_default_application/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
prbt_default_application/config/: prbt.srdf.xacro
prbt_default_application/launch/: my_application.launch
prbt_default_application/scripts/: myApplication.py  myFirstApplication.py
prbt_default_application/urdf/: my_first_application.xacro
