<?xml version="1.0"?>
<package format="2">
  <name>prbt_default_application</name>
  <version>0.1.0</version>
  <description>Startup a PRBT manipulator module from ROS and move it.</description>

  <maintainer email="a.gutenkunst@pilz.de">Alexander Gutenkunst</maintainer>
  <maintainer email="c.henkel@pilz.de">Christian Henkel</maintainer>
  <maintainer email="h.slusarek@pilz.de">Hagen Slusarek</maintainer>
  <maintainer email="i.martini@pilz.de">Immanuel Martini</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://wiki.ros.org/pilz_robots</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>prbt_moveit_config</exec_depend>
  <exec_depend>pilz_robot_programming</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
